[package]
name = "imgui-vulkano-renderer"
version = "0.8.0"
authors = ["Sam Blazes"]
edition = "2021"

repository = "https://github.com/Tenebryo/imgui-vulkano-renderer"
readme = "README.md"
license = "MIT"
license-file = "LICENSE"
description = "A renderer for imgui-rs using Vulkano"
categories = ["gui", "rendering"]
keywords = ["vulkano", "imgui", "graphics", "gui", "rendering"]

[dependencies]
bytemuck = { version = "1.7", features = ["derive", "extern_crate_std", "min_const_generics"] }
vulkano = "0.29"
vulkano-shaders = "0.29"
imgui = "0.8.2"

[dev-dependencies]
clipboard = "0.5.0"
imgui-winit-support = {version = "0.8.2", default_features = false, features = ["winit-26"]}
vulkano-win = "0.29"

winit = "0.26.0"
image = "0.23.8"

